--- a/css/main.css
+++ b/css/main.css
@@ -5806,11 +5806,20 @@ button.close {
 @media print {
   .hidden-print {
     display: none !important; } }
-/* colores */
 .fondo, header, .nuestra, .preguntas, .campos {
   background-size: 100%;
   background-repeat: no-repeat;
   padding-top: 3%; }
+
+.logo {
+  margin-top: -2%;
+  margin-left: 5%; }
+
+p,
+h1,
+h2,
+h3 {
+  font-family: "Raleway", sans-serif; }
 
 header {
   background-image: url("../img/parallax-1.png"); }
@@ -5819,12 +5828,13 @@ header {
   height: 350px; }
 
 .scroll {
-  height: 145px;
-  padding-top: 4%;
-  padding-bottom: 4%; }
+  height: 110px;
+  padding-top: 4%; }
 
 .arrow {
-  width: 10%; }
+  margin-left: 49.3%;
+  padding-top: 3%;
+  padding-bottom: 8%; }
 
 .nuestra {
   background-image: url("../img/parallax-3.png"); }
@@ -5853,6 +5863,61 @@ h2 {
 .margen {
   margin-top: 5%;
   margin-bottom: 5%; }
+
+.foto1 {
+  position: relative; }
+
+.foto2 {
+  margin-left: -9.5%; }
+
+.foto3 {
+  margin-left: -9%; }
+
+.foto4 {
+  width: 100%;
+  height: 299px;
+  margin-left: -2.3%; }
+
+.foto1, .foto4 {
+  width: 100%; }
+
+.foto2, .foto3 {
+  width: 110%; }
+
+.foto1, .foto2, .foto3, .foto4 {
+  z-index: 1; }
+
+/*-- textos --*/
+/*.texto1{
+	margin-top: -60%;
+	margin-left: 25%;
+	position: relative;
+}
+.texto2{
+	margin-top: -60%;
+	margin-left: 10%;
+	position: relative;
+}
+.texto3{
+	margin-top: -60%;
+	margin-left: 20%;
+	margin-right: 20%;
+	position: relative;
+}
+.texto4{
+	//margin-top: -50%;
+	position: relative;
+}
+.texto1, .texto2, .texto3, .texto4{
+	z-index: 2;
+	color: $blanco;
+	font-weight: bold;
+}*/
+.position {
+  position: absolute; }
+
+.relative {
+  position: relative; }
 
 .preguntas {
   background-image: url("../img/parallax-2.png"); }
@@ -5886,5 +5951,34 @@ h2 {
 
 .los-campos {
   padding-bottom: 25%; }
+
+.slides-padding {
+  padding-left: 1.1%; }
+
+.amamos {
+  font-weight: bold; }
+
+hr {
+  background-color: #000;
+  width: 13%;
+  height: 4px;
+  border-style: 2px solid black;
+  margin-left: -0.5%; }
+
+.top {
+  padding-top: 12%; }
+
+footer {
+  background-color: #3B3B3B; }
+
+.logo-footer {
+  margin-top: 4%;
+  margin-left: 20%;
+  margin-bottom: 4%; }
+
+.gris-claro {
+  color: #616161;
+  font-weight: bold;
+  margin-top: 7%; }
 
 /*# sourceMappingURL=main.css.map */
